--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     -->
     <link rel="manifest" href="/manifest.json" />
     <title>React App</title>
+    <link rel="stylesheet" href="src/assets/index.css"/>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
